db_securityGroup.tf

# resource "aws_security_group" "db_sg" {
#   name        = var.db_security_group_name
#   description = "Allow TLS inbound traffic"

#   ingress {
#     from_port   = 5432
#     to_port     = 5432
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }


#   tags = {
#     Name = "strapi"
#   }
# }
